--- a/App/Styles/_mixins.scss
+++ b/App/Styles/_mixins.scss
@@ -8,6 +8,9 @@
     font-style: italic;
     margin-top: 1.5rem;
     color: var(--Black);
+    @media (max-width: 500px){
+        font-size: 1rem;
+    }
 }
 @mixin part-of-speech{
     margin-right: 2rem;
@@ -16,10 +19,13 @@
 @mixin meaning{
     font-size: 1.3rem;
     color: var(--Black);
+    @media (max-width: 500px){
+        font-size: 1.1rem;
+    }
 }
 @mixin meanings-list{
     font-size: 1.1rem;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     margin-left: 1rem;
     list-style-type: none;
     justify-content: left;
@@ -32,6 +38,9 @@
         position: relative;
         right: 1rem;
         top: 0.2rem;
+    }
+    @media (max-width: 500px){
+        font-size: 1rem;
     }
 }
 
@@ -55,4 +64,7 @@
     margin-right: 1rem;
     font-size: 1.2rem;
     font-weight: 500;
+    @media (max-width: 500px){
+        font-size: 1rem;
+    }
 }
