--- a/App/Styles/style.scss
+++ b/App/Styles/style.scss
@@ -29,6 +29,9 @@
         &:focus{
             outline: 2px solid var(--input-focus);
         }
+        @media (max-width: 500px){
+            font-size: 1rem;
+        }
     }
     .search-btn{
         z-index: 15;
@@ -40,6 +43,10 @@
             transform: translate(-3rem, -1rem);
             width: 2rem;
             cursor: pointer;
+            @media (max-width: 500px){
+                width: 1.5rem;
+                transform: translate(-3rem, -0.8rem);
+            }
         }
     }
 }
@@ -63,10 +70,17 @@ main{
                 font-size: 3.5rem;
                 font-weight: map-get($weights, "Bold");
                 color: var(--Black);
+                word-break: break-all;
+                @media (max-width: 500px){
+                    font-size: 2.5rem;
+                }
             }
             .phonetic{
                 color: map-get($primary, "Dark-Violet");
                 font-size: 1.5rem;
+                @media (max-width: 500px){
+                    font-size: 1.2rem;
+                }
             }
         }
         .word-right{
